@@ -3,9 +3,13 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/python:3.6.2-stretch-browsers
+      - image: deltachat/pymailserver 
     steps:
       - checkout
-      - run: pip install tox 
-      - run: tox 
-
+      - run: 
+          name: tox-test mailadm 
+          environment: 
+                LC_ALL: C.UTF-8
+                LANG: C.UTF-8
+          command: |
+            tox 
