@@ -1,5 +1,5 @@
 [tox]
-envlist = py37,lint
+envlist = py,lint
 
 [testenv]
 deps = 
